# starmapper

./: Cargo.toml  LICENSE  README.md
docs/: architecture.md  gaps.md  ui-mockups.md
src/: color.rs  galaxy.rs  habitable.rs  main.rs  star.rs
src/render/: egui_renderer.rs  mod.rs  png_renderer.rs
src/ui/: filter_panel.rs  galaxy_canvas.rs  legend.rs  mod.rs  star_detail.rs  status_bar.rs  top_bar.rs
