[package]
name = "starmapper"
version = "0.1.0"
edition = "2021"
authors = ["Arunkumar Mourougappane <amouroug.dev@gmail.com>"]

[dependencies]
eframe = "0.29"
egui = "0.29"
rand = "0.8"
rand_distr = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
